<resources>
    <string name="app_name">FanTickets</string>
    <string name="hint_search">Поиск</string>
    <string name="main_page">Главная страница</string>
    <string name="next_match">Ближайший матч</string>
    <string name="popular_match">Популярные матчи</string>
    <string name="buy_ticket">Купить билет</string>
    <string name="stadium_header">Покупка билета</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="log_in">Вход</string>
    <string name="login_button">Войти</string>
    <string name="probel"> </string>
    <string name="slash">/</string>
    <string name="registration">Регистрация</string>
    <string name="registration_2">Зареистрироваться</string>
    <string name="user_name">ИМЯ</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="authorization">Авторизация</string>
    <string name="match_calendar">Календарь матчей</string>
    <string name="user_email">EMAIL</string>
    <string name="family">ФАМИЛИЯ</string>
    <string name="user_login">ЛОГИН</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_out"><u>Выйти</u></string>
    <string name="change"><u>Изменить</u></string>
    <string name="save"><u>Сохранить</u></string>
    <string-array name="T_14j">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_14j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_14j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_14j">
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>115</item>
        <item>117</item>
        <item>118</item>
        <item>119</item>
    </string-array>

    <string-array name="T_15d">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_15d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_15d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_15d">
        <item>120</item>
        <item>121</item>
        <item>122</item>
        <item>123</item>
        <item>124</item>
        <item>125</item>
        <item>127</item>
        <item>128</item>
        <item>129</item>
    </string-array>

    <string-array name="T_18d">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_18d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_18d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_18d">
        <item>130</item>
        <item>131</item>
        <item>132</item>
        <item>133</item>
        <item>134</item>
        <item>135</item>
        <item>137</item>
        <item>138</item>
        <item>139</item>
    </string-array>

    <string-array name="T_19j">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_19j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_19j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_19j">
        <item>140</item>
        <item>141</item>
        <item>142</item>
        <item>143</item>
        <item>144</item>
        <item>145</item>
        <item>147</item>
        <item>148</item>
        <item>149</item>
    </string-array>

    <string-array name="T_20d">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_20d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_20d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_20d">
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>153</item>
        <item>154</item>
        <item>155</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
    </string-array>

    <string-array name="T_24d">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_24d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_24d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_24d">
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
    </string-array>

    <string-array name="T_28d">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_28d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_28d">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_28d">
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
    </string-array>

    <string-array name="T_28j">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_28j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_28j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_28j">
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
    </string-array>

    <string-array name="T_9j">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="S_9j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Row_9j">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="Place_9j">
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
    </string-array>

    <string name="big_text">Выберите дату, чтобы узнать, какой матч проходит в этот день.<b><font color="#1F743C"> Зелёным</font></b> отмечены дни, когда проходят игры.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>