<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/header"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti"
                android:text="@string/app_name"
                android:layout_marginTop="32sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/mainpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti"
                android:text="@string/authorization"
                android:textAlignment="center"
                android:layout_marginTop="90sp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/log_in"
                android:layout_width="72dp"
                android:layout_height="34dp"
                android:layout_marginStart="50sp"
                android:fontFamily="@font/athiti_semibold"
                android:layout_marginTop="20sp"
                android:background="@android:color/transparent"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                app:srcCompat="@drawable/ball" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti_semibold"
                android:textColor="@color/black"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:text="@string/slash" />

            <Button
                android:id="@+id/registration"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:fontFamily="@font/athiti_semibold"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="5sp"
                android:background="@android:color/transparent"
                android:onClick="onClickToReg"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="SmallSp" />

        </LinearLayout>


        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/athiti"
            android:text="@string/user_login"
            android:textColor="@color/text_log_in"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="50sp"
                android:background="@drawable/gray_rectangle" />

            <EditText
                android:id="@+id/edit_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginStart="60sp"
                android:layout_marginEnd="60sp"
                android:background="@null"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="15sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti"
            android:layout_marginTop="25sp"
            android:layout_marginStart="60sp"
            android:textColor="@color/text_log_in"
            android:textSize="12sp"
            android:text="@string/password"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="50sp"
                android:background="@drawable/gray_rectangle" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_marginTop="10sp"
                android:layout_marginStart="60sp"
                android:layout_marginEnd="60sp"
                android:textSize="15sp"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="TextFields" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginTop="40sp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/fonmatch"
                android:onClick="onClickEnterBD"/>
            <TextView
                android:id="@+id/login_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/athiti_semibold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="51sp"
                android:text="@string/log_in" />

        </FrameLayout>

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti"
            android:layout_marginTop="30sp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/text_log_in"
            android:textSize="9sp" />


        <include layout="@layout/footer"
            android:layout_width="fill_parent"
            android:layout_marginTop="30sp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"/>


    </LinearLayout>
</ScrollView>